tests/snapshots/snapshot_tests__snapshot_cmd_edit_replace_lines_range_mismatch.snap
---
source: tests/snapshot_tests.rs
expression: "format!(\"{:?}\", result)"
---
Err("Line number out of range")
