tests/snapshots/snapshot_tests__snapshot_cmd_edit_with_special_characters.snap
---
source: tests/snapshot_tests.rs
expression: normalize_edit_output(&result)
---
Edit applied successfully.

<diff>
--- <TEMP_FILE>
+++ <TEMP_FILE>
-hello "world"
+replaced
 second 'line'
-third
+third

</diff>
