tests/snapshots/snapshot_tests__snapshot_cmd_read_file_with_only_newlines.snap
---
source: tests/snapshot_tests.rs
expression: result
---
<file>
1#KM:
2#WV:
3#HH:

(End of file - 3 total lines)
</file>
