tests/snapshots/snapshot_tests__snapshot_cmd_read_single_line_file.snap
---
source: tests/snapshot_tests.rs
expression: result
---
<file>
1#KP:only line

(End of file - 1 total lines)
</file>
