tests/snapshots/snapshot_tests__snapshot_cmd_read_unicode.snap
---
source: tests/snapshot_tests.rs
expression: result
---
<file>
1#XY:Hello 世界
2#ZJ:🎉 Emoji test
3#HW:

(End of file - 3 total lines)
</file>
